# styler

./: LICENSE  README.md  setup.cfg
src/: styler.py
tests/: test_css_parsing_tests.py  test_styler.py
