[metadata]
name = styler
version = 0.0.1
author = Coen Mulders
author_email = coen.mulders@gmail.com
description = Ambitous project to render HTML documents with CSS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
tests = 
    mypy
    coverage[toml]
dev = 
    black
    isort